[metadata]
license_file = LICENSE
name = pyzinc
author = Scott Jespersen
description = I/O for Project Haystack Zinc file format
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://pyzinc.readthedocs.io/
project_urls =
    pyzinc documentation = https://pyzinc.readthedocs.io/en/latest/
    pyzinc source = https://github.com/sdjespersen/pyzinc/
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages =
    pyzinc
python_requires = >=3.7
install_requires=
    pandas >= 1.0.0
setup_requires =
    setuptools_scm >= 1.15
include_package_data = True
